--- a/languages/easy-webdev.pot
+++ b/languages/easy-webdev.pot
@@ -9,8 +9,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Juan Pablo De la torre\n"
+"Language-Team: English\n"
 
 #: 404.php:15
 #@ _s
@@ -339,7 +339,7 @@ msgstr ""
 msgid "Pages:"
 msgstr ""
 
-#. translators: %s: Name of current post 
+#. translators: %s: Name of current post
 #: template-parts/content.php:25
 #, php-format
 #@ _s
